--- a/src/main/webapp/WEB-INF/jspf/body.jspf
+++ b/src/main/webapp/WEB-INF/jspf/body.jspf
@@ -4,72 +4,48 @@
 
 <!--logo area-->
 <div id="headerTopDiv">
-    <div id="headerDiv">
-        <img src="img/50.gif" alt="50 år">
-        <h1 id="headerText">
-            <span id="legoText">
-                <span style="color: blue;">5</span>
-                <span style="color: green;">0 </span>
-                <span style="color: yellow;">å</span>
-                <span style="color: red;">r</span>
-            </span>
-        </h1>
-    </div>
-    <br>
+    <a href="FrontController?command=LogoutCommand">
+        <div id="headerDiv">
+            <img src="img/50.gif" alt="50 år">
+            <h1 id="headerText">
+                <span id="legoText">
+                    <span style="color: blue;">5</span>
+                    <span style="color: green;">0 </span>
+                    <span style="color: yellow;">å</span>
+                    <span style="color: red;">r</span>
+                </span>
+            </h1>
+        </div>
+    </a>
 
-</div>
-
-<!--plant login and register form on page-->
-<div id="reglogin">
-    <div id="login">
-        <a href="form.html"><p id="openLogin">Login</p></a>
-        <form name="LoginCommand" action="FrontController" method="POST">
-            <input type="hidden" name="command" value="LoginCommand">
-            <p>
-                <label for="username">Email</label>
-                <input type="text" name="email" id="username">
-            </p>
-            <p>
-                <label for="password">Password: </label>
-                <input type="text" name="password" id="password">
-            </p>
-            <p class="button">
-                <input type="submit" name="button" class="btn btn-success" id="button" value="Submit" >
-            </p>
-        </form>
-        <input type="submit" name="button" class="btn btn-warning" id="registerButton" value="Registration" >
-    </div>
-
-    <div id="registerDiv">
-        <form name="RegisterCommand" action="FrontController" method="POST">
-            <input type="hidden" name="command" value="RegisterCommand">
-            <p>
-                <label for="username">Email</label>
-                <input type="text" name="email" id="username">
-            </p>
-            <p>
-                <label for="password">Kodeord: </label>
-                <input type="text" name="password1" id="password1">
-            </p>
-            <p>
-                <label for="password">Gentag kodeord: </label>
-                <input type="text" name="password2" id="password2">
-            </p>
-            <p class="button">
-                <input type="submit" name="button" class="btn btn-success" id="sendRegisterButton" value="Indsend" >
-            </p>
-        </form>
-    </div>
-</div>
-
-<!--Here comes the tables and other infos-->
-<div id="mainInfo">
-    <p></p>
-    <div class="container">
-        <div class="row">
-            <div class="col-sm">
-                <!--Inserting place for order table-->
-                <table id="mainTable" ></table>
+    <!--plant login and register form on page-->
+        <div id="login">
+            <a href="form.html"><p id="openLogin">Login</p></a>
+            <form name="LoginCommand" action="FrontController" method="POST">
+                <input type="hidden" name="command" value="LoginCommand">
+                <p>
+                    <label for="giver">Giver</label>
+                    <input type="text" name="giver" id="username">
+                </p>
+                <p>
+                    <label for="password">Kodeord</label>
+                    <input type="text" name="password" id="password">
+                </p>
+                <p class="button">
+                    <input type="submit" name="button" class="btn btn-success" id="button" value="Submit" >
+                </p>
+            </form>
+        </div>
+    
+    <!--Here comes the tables and other infos-->
+    <div id="mainInfo">
+        <p></p>
+        <div id="wishTable" class="container">
+            <div class="row">
+                <div class="col-sm">
+                    <!--Inserting place for order table-->
+                    <table id="mainTable" ></table>
+                </div>
             </div>
         </div>
     </div>
