--- a/src/main/webapp/css/core.css
+++ b/src/main/webapp/css/core.css
@@ -1,13 +1,16 @@
 /* 
-    Created on : Mar 19, 2019, 1:16:21 PM
+    Created on : apr 17, 2019
     Author     : martin
 */
 
+#headerDiv {
+    text-align: center;
+    font-family: 'Impact', cursive;
+}
+
 #legoText span {
     animation: bounce .5s ease infinite alternate;
-    font-family: 'Titan One', cursive;
     font-size: 100px;
-    left: 10px;
     text-shadow: 0 1px 0 #CCC,
         0 2px 0 #CCC,
         0 3px 0 #CCC,
@@ -41,16 +44,13 @@
 }
 
 #headerTopDiv {
-    text-align: center;
-    position: fixed;
+    /*text-align: left;*/
+    position: relative;
     top: 0px;
 }
 
 #headerDiv {
-    display: inline-block;
-    top: 0;
-    left: 300px;
-    width: 400px;
+    position: relative;
     border: 3px solid #73AD21;
     background-color: lightblue;
     font-size: 56px
@@ -61,16 +61,19 @@
     top: 10px;
 }
 
-#menuBlock {
-    display: inline-block;
-    width: 400px;
+.white-text-with-blue-shadow {
+    text-align: center;
+    font-style: bold;
+    text-shadow: 1px 1px 2px black, 0 0 1em black, 0 0 0.2em black;
+    color: white;
+    font: 3em Georgia, serif;
 }
 
 #login {
-    position: absolute;
+    position: relative;
     display: none;
-    top: 0px;
-    left: 400px;
+    /*top: 0px;*/
+    /*left: 400px;*/
     width: 300px;
     z-index: 100;
     background-color: rgb(27,45,94);
@@ -79,7 +82,9 @@
 
 #login a {
     text-decoration: none;
+    text-align: center;
 }
+
 #openLogin {
     margin: 0;
     cursor: pointer;
@@ -105,6 +110,7 @@
     padding: 10px 10px 0 10px;
     display: none;	
 }
+
 #login label {
     font-size: .75em;
     color: white;
@@ -114,53 +120,29 @@
     margin: 0 15px 0 0;
     display: inline-block;
 }
+
 #login input[type="text"] {
     font-size: 14px;
     width: 140px;	
 }
+
 #login .button {
     text-align: right;	
     padding-right: 15px;
 }
 
-#registerButton {
-    display: none;
-}
-
-#registerDiv {
+#mainTable {
     position: relative;
-    width: 300px;
-    left: 400px;
-    top: 220px;
-    z-index: 100;
-    background-color: rgb(27,45,94);
-    border-radius: 5px 5px 5px 5px;
-}
-
-#registerDiv form {
-    padding: 10px 10px 0 10px;
-    display: none;	
-}
-#registerDiv label {
-    font-size: .75em;
-    color: white;
-    font-weight: bold;
-    width: 100px;
-    text-align: right;
-    margin: 0 15px 0 0;
-    display: inline-block;
-}
-
-#mainInfo {
-    position: absolute;
+    text-align: center;
     font-size: 60px;
-    left: 450px;
-    top: 50px;
+    /*    left: 450px;
+        top: 50px;*/
     z-index: 45;
 }
-#mainInfo p {
-    font-size: 20px;
-    font-family: 'Titan One', cursive;
+
+#mainTable p {
+    font-size: 40px;
+    font-family: 'Times New Roman', cursive;
 }
 
 #errorInfo {
@@ -174,69 +156,15 @@
     font-family: 'Titan One', cursive;
 }
 
-#orderInfoBox {
+#firstText {
     padding: 5px 5px 0px 35px;
     border: 2px solid #4CAF50;
-    font-size:10px;
-    width:100%;
     position: absolute;
-    right: 50px;
-    height: auto;
-    width: auto;
-    background-color: gainsboro;
-    background-image: url("../img/lego_house2.jpg");
-}
-
-.orderInfo p {
-    font-family: 'Times New Roman', cursive;
-    display: inline-block;
-    color: yellow;
-    text-shadow: 3px 3px 5px #000;
-    font-size: 40px;
-}
-
-.orderInfo li {
-    font-family: 'Times New Roman', cursive;
-    color: black;
-    text-shadow: 3px 3px 5px white;
+    font-size:2em;
     text-align: center;
-    font-size: 60px;
-}
-
-#orderInfoHeader {
-    font-family: 'Times New Roman', cursive;
-    text-shadow: 2px 2px 4px #000;
-    color: black;
-    font-size: 65px;
-}
-
-#newHouseForm label {
-    font-size: .75em;
-    color: black;
-    font-weight: bold;
-    width: 100px;
-    text-align: right;
-    margin: 0 15px 0 0;
-    display: inline-block;
-}
-
-#newHouseForm input[type="text"] {
-    font-size: 14px;
-    width: 140px;	
-}
-
-firstText {
-    padding: 5px 5px 0px 35px;
-    border: 2px solid #4CAF50;
-    font-size:10px;
-    width:100%;
-    position: absolute;
-    right: 50px;
     height: auto;
     width: auto;
     background-color: gainsboro;
     font-family: 'Times New Roman', cursive;
     text-shadow: 2px 2px 4px #000;
-    color: black;
-    font-size: 65px;
 }
