--- a/src/main/webapp/WEB-INF/jspf/header.jspf
+++ b/src/main/webapp/WEB-INF/jspf/header.jspf
@@ -6,6 +6,7 @@
 <script src="js/jquery-3.3.1.min.js"></script>
 <script src="js/jquery-ui-1.12.1.js"></script>
 <script src = "js/core.js"></script>
+<%@ taglib prefix = "c" uri = "http://java.sun.com/jsp/jstl/core" %>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 <%String chUser = (String) session.getAttribute("user");
     if (chUser == null)
