--- a/src/main/webapp/WEB-INF/jspf/body.jspf
+++ b/src/main/webapp/WEB-INF/jspf/body.jspf
@@ -1,5 +1,6 @@
 <!--body html that will go on all pages-->
 
+<%@ taglib prefix = "c" uri = "http://java.sun.com/jsp/jstl/core" %>
 <%@ page pageEncoding="UTF-8" %>
 
 <!--logo area-->
@@ -38,12 +39,8 @@
     </div>
 </div>
 
-<!--area where an error info is shown if it exist-->
-<% String error = (String) request.getAttribute("error");
-    if (error != null)
-    {%>
+<c:if test = "${sessionScope.error != null}">">
 
-<div id="errorInfo"><p> <%=error%> <p></div>
+    <div id="errorInfo"><p> ${sessionScope.error} <p></div>
 
-<%  }
-%>
+</c:if>
