--- a/src/main/webapp/WEB-INF/jspf/header.jspf
+++ b/src/main/webapp/WEB-INF/jspf/header.jspf
@@ -5,11 +5,11 @@
 <link rel="stylesheet" href="css/core.css">
 <script src="js/jquery-3.3.1.min.js"></script>
 <script src="js/jquery-ui-1.12.1.js"></script>
-<!--<script src = "js/core.js"></script>-->
+<script src = "js/core.js"></script>
 <%@ taglib prefix = "c" uri = "http://java.sun.com/jsp/jstl/core" %>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 
-<%--<c:choose>
+<c:choose>
     <c:when test="${sessionScope.user == null}">
         <script>
             loginDropdown();
@@ -20,4 +20,4 @@
             hideLogin();
         </script>
     </c:otherwise>
-</c:choose>--%>
+</c:choose>
