--- a/src/main/webapp/WEB-INF/jspf/menu.jspf
+++ b/src/main/webapp/WEB-INF/jspf/menu.jspf
@@ -11,7 +11,7 @@
                 <button class="btn btn-success" onclick="window.location.href = 'FrontController?command=MakingNewWishCommand';">Nyt ønske</button>
             </c:if>
             <div id="bettina">
-                <form action="FrontController" method="GET">
+                <form action="FrontController" method="POST">
                     <input type="hidden" name="command" value="SeeWishesCommand" />
                     <input type="hidden" name="userName" value="Bettina" />
                     <button class="button btn btn-warning">Bettina</button>
@@ -25,21 +25,21 @@
                 </form>
             </div>
             <div id="esther">
-                <form action="FrontController" method="GET">
+                <form action="FrontController" method="POST">
                     <input type="hidden" name="command" value="SeeWishesCommand" />
                     <input type="hidden" name="userName" value="Esther" />
                     <button id="next" class="btn btn-warning">Esther</button>
                 </form>
             </div>
             <div id="isabel">
-                <form action="FrontController" method="GET">
+                <form action="FrontController" method="POST">
                     <input type="hidden" name="command" value="SeeWishesCommand" />
                     <input type="hidden" name="userName" value="Isabel" />
                     <button id="next" class="btn btn-warning">Isabel</button>
                 </form>
             </div>
             <div id="jakob">
-                <form action="FrontController" method="GET">
+                <form action="FrontController" method="POST">
                     <input type="hidden" name="command" value="SeeWishesCommand" />
                     <input type="hidden" name="userName" value="Jakob" />
                     <button id="next" class="btn btn-warning">Jakob</button>
@@ -53,14 +53,14 @@
                 </form>
             </div>
             <div id="martin">
-                <form action="FrontController" method="GET">
+                <form action="FrontController" method="POST">
                     <input type="hidden" name="command" value="SeeWishesCommand" />
                     <input type="hidden" name="userName" value="Martin" />
                     <button class="button btn btn-warning">Martin</button>
                 </form>
             </div>
             <div id="peter">
-                <form action="FrontController" method="GET">
+                <form action="FrontController" method="POST">
                     <input type="hidden" name="command" value="SeeWishesCommand" />
                     <input type="hidden" name="userName" value="Peter" />
                     <button id="next" class="btn btn-warning">Peter</button>
